# cpp-demo

./: CMakeLists.txt  README.md
src/: Application.cpp  Application.h  main.cpp
src/FilesystemInputOutputService/: FilesystemInputOutputService.h  IFilesystemInputOutputService.cpp
src/Interfaces/: IFilesystemInputOutputService.h  ILoggingService.h  IService.h  IUdpTransceiverService.h
src/LoggingService/: LoggingService.cpp  LoggingService.h
src/Reuse/AbsService/: AbsService.cpp  AbsService.h
src/Reuse/Singleton/: Singleton.h
src/ServiceManager/: ServiceManager.cpp  ServiceManager.h
src/UdpTransceiverService/: UdpTransceiverService.cpp  UdpTransceiverService.h
